Updating to Portland curriculum

--- a/04-css-intro.html
+++ b/04-css-intro.html
@@ -21,11 +21,6 @@
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<script>
-			// If the query includes 'print-pdf' we'll use the PDF print sheet
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-		</script>
-
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
@@ -65,8 +60,19 @@
 					<img src="http://img101.fansshare.com/photos/paulrudd/romeo-and-julia-still-romeo-and-juliet-745865763.jpg"/>
 					<div class="notes">
 						<p>And you have the 1996 version with Leonardo di Caprio, guns and suits. The two movies have the exact same lines, but they look and feel very different. That’s what CSS can do to HTML.</p>
-						<p>So all right, you already know how to write some HTML tags, how do we write CSS? </p> 
-						<p>Much like we all have an index.html file, we need to make a CSS file.</p>
+					</div>
+				</section>
+
+				<section>
+					<h2>What CSS is used for</h2>
+					<ul>
+						<li class="fragment">Change <span style="color: #00b29e">color</span> and <span style="background-color: #00b29e">background color</span></li>
+						<li class="fragment">Make text <span style="font-size: 1.3em">larger</span>, <strong>bold</strong> and <em>italic</em></li>
+						<li class="fragment"><span style="font-family: Georgia">Use a different font altogether</span></li>
+						<li class="fragment">Add <span style="border: 1px solid gray;">borders</span> and <span style="margin: 0 50px">spacing</span></li>
+						<li class="fragment">Make things big <img src="images/presentations/css-intro/cat.png" width="125" style="vertical-align: middle"> and small <img src="images/presentations/css-intro/cat.png" width="50" > </li>
+					</ul>
+					<div class="notes">
 					</div>
 				</section>
 
@@ -229,18 +235,27 @@
 					</div>
 				</section>
 
+				<section class="small">
+					<h2>Looking up CSS</h2>
+					<p>Don't know how to write a CSS property? Google it!</p>
+					<img src="images/presentations/css-intro/search-full.png">
+					<div class="notes">
+						
+					</div>
+				</section>
+
 				<section>
 					<h2>With your mentors:</h2>
 					
 					<ol>
-						<li>Practice making a CSS file, linking it, and writing CSS, <a href="http://codewithmemiami.com/exercises.shtml#lesson-4">following the instructions on the exercise sheet</a>. Try out these properties:
+						<li>Practice making a CSS file, linking it, and writing CSS, <a href="http://codewithme.us/portland/exercises.html#lesson-4">following the instructions on the exercise sheet</a>. Try out these properties:
 						<ul>
-							<li>color, font-family, font-size</li>
+							<li>color, font-family, font-size, background-color</li>
 							<li>Try looking up: font-weight, underline and italic</li>
 						</ul>
 
 						</li>
-						<li>Do exercise #4: <a href="http://codewithmemiami.com/exercises.shtml#exercise-4">Style the Onion article with CSS</a></li>
+						<li>Do exercise #4: <a href="http://codewithme.us/portland/exercises.html#exercise-4">Style the Onion article with CSS</a></li>
 					</ol>
 
 					<div class="notes">
